    ``astext()`` method.

  __ http://docutils.sourceforge.net/docs/ref/rst/restructuredtext.html#escaping-mechanism

* docutils/utils/__init__.py

  - unescape() definition moved to `nodes` to avoid circular import
    dependency. Fixes [ 366 ].

* docutils/transforms/universal.py

  - Fix [ 332 ]: Standard backslash escape for smartquotes.
    Fix [ 342 ]: No escape in roles descending from `inline literal`.

* docutils/statemachine.py

  - Patch [ 158 ]: Speed up patterns by saving compiled versions (eric89gxl)

* test/test_io.py:

  - Apply patch #157: avoid test failure because of a ``ResourceWarning``.

Release 0.15.1 (2019-07-24)
===========================

source: branches/rel-0.15

Bugs #366 fix release for python2 only.


Release 0.15 (2019-07-20)
=========================

* General

  - Dropped support for Python 2.4, 2.5, 3.1, and 3.2.
  - Infrastructure automation.

* docs/ref/rst/restructuredtext.txt:

  - Document rST syntax change: Tokens like ``:this:example:`` are now valid
    field list names (instead of ordinary text).

* docutils/io.py

  - Fix [ 348 ] Since Python 3.4, the 'U' universal newlines mode has been
    deprecated (thanks to hugovk).

*  docutils/languages/la.py
   docutils/parsers/rst/languages/la.py:

  - Apply [ 153 ] Korean mappings by Thomas Sungjin Kang.

* docutils/nodes.py

  - Fix [ 251 ] system_message.copy() TypeError.
  - Element.copy() also copies `document`, `line`, and `source` attributes.

* docutils/parsers/rst/__init__.py:

  - Apply [ 152 ] reset `default role` at end of document.

* docutils/parsers/rst/states.py:

  - Allow embedded colons in field list field names.
  - Add `rawsource` attribute for text of inline elements.

* docutils/parsers/rst/directives/html.py:

  - Fix bug #281: Remove escaping backslashes in meta directive content.

* docutils/parsers/rst/directives/misc.py:

  - Don't convert tabs to spaces, if `tab_width` is negative in
    `include` directive with `code` option.
